--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,4 +108,7 @@
   .padding {
     @apply px-4 py-8 md:px-8;
   }
+  .text {
+    @apply text-[16px] font-palanquin text-sm  text-muted-foreground tracking-tight leading-relaxed
+  }
 }
